# shelf-brain

./: LICENSE  README.md  TODO
backend/: Cargo.toml  README.md  env.json  samconfig.toml  template.yaml
backend/src/: main.rs
docs/: LEAN_DESIGN_BRIEF.md  MVP_PRODUCT_SPEC.md  TECHNICAL_ARCHITECTURE.md
mobile/: package.json  pnpm-lock.yaml
